fix styling